--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,36 @@
   to {
     left: 0; } }
 
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0); }
+  to {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0); } }
+
+@keyframes fadeInDown {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0); }
+  to {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0); } }
+
+.fadeInUp {
+  animation: fadeInUp 1.5s;
+  animation-iteration-count: 1;
+  overflow: hidden; }
+
+.fadeInDown {
+  animation: fadeInDown 1.5s;
+  animation-iteration-count: 1;
+  overflow: hidden; }
+
 *,
 *::after,
 *::before {
@@ -1220,6 +1250,12 @@ body {
     .alternative-content__col-right {
       width: calc(100% - 600px); } }
 
+.alternative-content__col-right--no-animation {
+  width: 100%; }
+  @media only screen and (min-width: 992px) {
+    .alternative-content__col-right--no-animation {
+      width: calc(100% - 600px); } }
+
 .alternative-content__we-build {
   padding: 20px;
   font-family: "Ivy Mode";
@@ -1238,11 +1274,16 @@ body {
   word-spacing: 80;
   font-size: 16;
   line-height: 25px;
-  padding: 20px; }
+  padding: 20px;
+  font-family: "Optima"; }
   @media only screen and (min-width: 992px) {
     .alternative-content__our-alternative {
       width: 280px;
-      padding: 25px 20px 25px 20px; } }
+      padding: 25px 20px 25px 0px; } }
+  @media only screen and (min-width: 1600px) {
+    .alternative-content__our-alternative {
+      width: 500px;
+      padding: 70px 20px 80px 0px; } }
 
 .alternative-content__have-you-read-left {
   min-height: 100%;
@@ -1253,7 +1294,8 @@ body {
   text-align: right;
   padding-top: 120px;
   padding-right: 70px;
-  font-family: "Optima"; }
+  font-family: "Optima";
+  z-index: 1; }
 
 .alternative-content__content-toggle {
   position: absolute;
@@ -1303,7 +1345,9 @@ body {
   background-color: #F1F4FF;
   display: none;
   padding: 20px;
-  min-height: 100% !important; }
+  min-height: 100% !important;
+  position: relative;
+  z-index: 0; }
   @media only screen and (min-width: 992px) {
     .alternative-content__have-you-read-right, .alternative-content__have-you-read-right--slide {
       padding: 100px 100px 45px 100px; } }
@@ -1360,7 +1404,8 @@ body {
   font-size: 16px;
   word-spacing: 80;
   line-height: 25px;
-  margin-bottom: 0px; }
+  margin-bottom: 0px;
+  font-family: "Optima"; }
   @media only screen and (min-width: 576px) {
     .alternative-content__paragraph {
       margin-bottom: 45px; } }
@@ -1665,6 +1710,9 @@ body {
     @media only screen and (min-width: 1400px) {
       .weekend-content__selector > span {
         margin-right: 95px; } }
+    .weekend-content__selector > span a {
+      text-decoration: none;
+      color: #fff; }
   .weekend-content__selector--active {
     display: none; }
   .weekend-content__selector--title {
@@ -1774,7 +1822,7 @@ body {
   margin-top: 30px; }
   @media only screen and (min-width: 992px) {
     .weekend-content__article {
-      margin-top: 8%; } }
+      margin-top: 12%; } }
 
 .weekend-content__article-paraghraph {
   padding: 0px 20px;
