--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -182,3 +182,42 @@
         left: 0;
     }
 }
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes fadeInDown {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
+  }
+}
+
+.fadeInUp {
+  animation: fadeInUp 1.5s;
+  animation-iteration-count: 1;
+  overflow: hidden;
+}
+
+.fadeInDown {
+  animation: fadeInDown 1.5s;
+  animation-iteration-count: 1;
+  overflow: hidden;
+}
