--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -99,7 +99,7 @@
                 height: 1px;
                 left: 0;
                 bottom: -2px;
-                background-color: $color-primary;
+                background-color: transparent;
             }
         }
 
