--- a/css/style.css
+++ b/css/style.css
@@ -2348,7 +2348,7 @@ body {
     height: auto; }
   .about-banner__title {
     font-family: 'Ivy Mode';
-    font-size: 48px;
+    font-size: 40px;
     line-height: 1.11;
     letter-spacing: 5.4px;
     font-weight: 400;
@@ -2381,15 +2381,24 @@ body {
       content: "";
       position: absolute;
       height: 1px;
-      width: calc(100% - 11px);
+      width: 30px;
       top: 10px;
       right: 11px;
       background-color: #FF24B0; }
+      @media only screen and (min-width: 576px) {
+        .about-banner__title-el::before {
+          width: 100px; } }
+      @media only screen and (min-width: 768px) {
+        .about-banner__title-el::before {
+          width: calc(100% - 11px); } }
   .about-banner__selectors-container {
     position: absolute;
     right: 0;
-    top: 265px;
+    top: 380px;
     overflow: hidden; }
+    @media only screen and (min-width: 576px) {
+      .about-banner__selectors-container {
+        top: 300px; } }
     .about-banner__selectors-container > :first-child {
       margin-bottom: 36px; }
   .about-banner__selector {
@@ -2397,7 +2406,7 @@ body {
     position: relative;
     font-family: 'Optima';
     width: min-content;
-    font-size: 14px;
+    font-size: 10px;
     font-weight: 700;
     letter-spacing: 1.68px;
     line-height: 1.85;
@@ -2406,6 +2415,9 @@ body {
     color: #fff;
     white-space: nowrap;
     text-decoration: none; }
+    @media only screen and (min-width: 576px) {
+      .about-banner__selector {
+        font-size: 14px; } }
     .about-banner__selector > span {
       display: block;
       margin-right: 75px;
@@ -2443,10 +2455,13 @@ body {
         transition: left 0.25s ease-in, background-color 0.25s ease-in; }
   .about-banner__carousel {
     position: relative;
-    max-width: 1300px;
+    max-width: 1590px !important;
     padding: 0 50px;
     max-height: 420px;
-    margin: 100px auto 0; }
+    margin: 250px auto 0; }
+    @media only screen and (min-width: 576px) {
+      .about-banner__carousel {
+        margin: 100px auto 0; } }
   .about-banner__carousel > .slick-arrow {
     position: absolute;
     top: 70px;
@@ -2478,9 +2493,12 @@ body {
     filter: grayscale(100%); }
   .about-banner .slick-current {
     height: 420px;
-    width: 330px !important;
+    width: 250px !important;
     margin: 0 15px;
     opacity: 1; }
+    @media only screen and (min-width: 576px) {
+      .about-banner .slick-current {
+        width: 330px !important; } }
   .about-banner__carousel-details {
     margin-top: 35px; }
   .about-banner__carousel-details-content {
@@ -2498,6 +2516,7 @@ body {
     font-size: 16px;
     letter-spacing: 1.28px;
     line-height: 1.5625;
+    padding-bottom: 50px;
     color: #FF24B0; }
 
 .about-content {
@@ -2526,14 +2545,21 @@ body {
     margin: 0 auto;
     grid-template-columns: 400px 1fr;
     grid-gap: 20px; }
+  .about-contact__details {
+    max-width: 100vw;
+    overflow-x: hidden; }
   .about-contact__title {
     font-family: 'Ivy Mode';
     font-size: 48px;
     line-height: 1.11;
     letter-spacing: 5.4px;
     font-weight: 400;
-    max-width: 1120px;
-    color: #182060; }
+    max-width: 100%;
+    color: #182060;
+    padding: 0px 20px; }
+    @media only screen and (min-width: 576px) {
+      .about-contact__title {
+        padding: 0px; } }
     @media only screen and (min-width: 768px) {
       .about-contact__title {
         font-size: 72px; } }
@@ -2547,10 +2573,23 @@ body {
     line-height: 1.5625;
     font-weight: 400;
     margin-top: 48px;
-    color: #09102E; }
+    color: #09102E;
+    max-width: 100%;
+    padding: 0px 20px; }
+    @media only screen and (min-width: 576px) {
+      .about-contact__info {
+        padding: 0px; } }
   .about-contact__group-title {
     color: #182060;
     font-weight: 700;
     text-transform: uppercase; }
   .about-contact__map {
     padding-top: 30px; }
+
+.team-selector--active {
+  display: none; }
+
+.about-carousel {
+  display: none; }
+  .about-carousel--active {
+    display: block !important; }
