--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -39,7 +39,7 @@
 
     &__title {
         font-family: 'Ivy Mode';
-        font-size: 48px;
+        font-size: 40px;
         line-height: 1.11;
         letter-spacing: 5.4px;
         font-weight: 400;
@@ -79,18 +79,28 @@
             content: "";
             position: absolute;
             height: 1px;
-            width: calc(100% - 11px);
+            width: 30px;
             top: 10px;
             right: 11px;
             background-color: $color-primary;
+            @include media-breakpoint-up(sm) {
+                width: 100px;
+            }
+            @include media-breakpoint-up(md) {
+                width: calc(100% - 11px);
+            }
         }
     }
 
     &__selectors-container {
         position: absolute;
         right: 0;
-        top: 265px;
+        top: 380px;
         overflow: hidden;
+
+        @include media-breakpoint-up(sm) {
+            top: 300px;
+        }
 
         & > :first-child {
             margin-bottom: 36px;
@@ -102,7 +112,7 @@
         position: relative;
         font-family: 'Optima';
         width: min-content;
-        font-size: 14px;
+        font-size: 10px;
         font-weight: 700;
         letter-spacing: 1.68px;
         line-height: 1.85;
@@ -111,6 +121,10 @@
         color: $color-white;
         white-space: nowrap;
         text-decoration: none;
+
+        @include media-breakpoint-up(sm) {
+            font-size: 14px;
+        }
 
         & > span {
             display: block;
@@ -159,10 +173,13 @@
 
     &__carousel {
         position: relative;
-        max-width: 1300px;
+        max-width: 1590px !important;
         padding: 0 50px;
         max-height: 420px;
-        margin: 100px auto 0;
+        margin: 250px auto 0;
+        @include media-breakpoint-up(sm) {
+            margin: 100px auto 0;
+        }
     }
 
     &__carousel > .slick-arrow {
@@ -207,9 +224,12 @@
 
     & .slick-current {
         height: 420px;
-        width: 330px !important;
+        width: 250px !important;
         margin: 0 15px;
         opacity: 1;
+        @include media-breakpoint-up(sm) {
+            width: 330px !important;
+        }
     }
 
     &__carousel-details {
@@ -235,6 +255,7 @@
         font-size: 16px;
         letter-spacing: 1.28px;
         line-height: 1.5625;
+        padding-bottom: 50px;
         color: $color-primary;
     }
 }
@@ -274,8 +295,9 @@
     }
 
     &__details {
-
-    }
+        max-width: 100vw;
+        overflow-x: hidden;
+    }   
 
     &__title {
         font-family: 'Ivy Mode';
@@ -283,8 +305,12 @@
         line-height: 1.11;
         letter-spacing: 5.4px;
         font-weight: 400;
-        max-width: 1120px;
+        max-width: 100%;
         color: $color-dark-primary;
+        padding: 0px 20px;
+        @include media-breakpoint-up(sm) {
+            padding: 0px;
+        }
 
         @include media-breakpoint-up(md) {
             font-size: 72px;
@@ -303,6 +329,11 @@
         font-weight: 400;
         margin-top: 48px;
         color: $color-dark-secondary;
+        max-width: 100%;
+        padding: 0px 20px;
+        @include media-breakpoint-up(sm) {
+            padding: 0px;
+        }
     }
 
     &__group-title {
@@ -315,3 +346,27 @@
         padding-top: 30px;
     }
 }
+
+.team-selector {
+    &--active {
+        display: none;
+    }
+}
+
+.about-carousel {
+    display: none;
+
+    &--active {
+        display: block !important;
+    }   
+}
+
+// .slick-list {
+//     width: 1450px !important;
+//     max-width: 100vw;
+
+//     @include media-breakpoint-up(md) {
+//         max-width: calc(100vw - 300px);
+//     }
+// }
+
