--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,12 @@
   -webkit-animation-timing-function: ease-out;
   animation-timing-function: ease-out; }
 
+.backInRight--no-zoom {
+  -webkit-animation: backInRightNoZoom 3s;
+  animation: backInRightNoZoom 3s;
+  -webkit-animation-timing-function: ease-out;
+  animation-timing-function: ease-out; }
+
 @keyframes backInRight {
   0% {
     transform: translateX(2000px) scale(0.7);
@@ -63,6 +69,16 @@
     opacity: .7; }
   100% {
     transform: scale(1);
+    opacity: 1; } }
+
+@keyframes backInRightNoZoom {
+  0% {
+    transform: translateX(2000px);
+    opacity: 0.7; }
+  80% {
+    transform: translateX(0px);
+    opacity: .7; }
+  100% {
     opacity: 1; } }
 
 .backInLeft {
@@ -228,7 +244,13 @@ body {
     height: 100%;
     margin-left: auto;
     padding-left: 16px;
-    padding-right: 100px; }
+    padding-right: 90px; }
+    @media only screen and (min-width: 992px) {
+      .navbar__container {
+        padding-right: 80px; } }
+    @media only screen and (min-width: 992px) {
+      .navbar__container--home {
+        padding-right: 110px; } }
     @media only screen and (min-width: 1400px) {
       .navbar__container {
         padding-right: 150px; } }
@@ -247,7 +269,7 @@ body {
     position: relative;
     font-family: 'Optima';
     font-size: 14px;
-    font-weight: 700;
+    font-weight: 400;
     line-height: 1.14;
     letter-spacing: 1.68px;
     text-transform: uppercase;
@@ -279,9 +301,9 @@ body {
   .navbar__logo {
     height: 45px;
     width: auto; }
-    @media only screen and (min-width: 1400px) {
+    @media only screen and (min-width: 1200px) {
       .navbar__logo {
-        height: auto; } }
+        height: 60px; } }
 
 .navbar-mobile {
   display: block;
@@ -408,7 +430,7 @@ body {
   .footer__contact-row {
     display: flex;
     font-family: 'Optima';
-    font-size: 14px;
+    font-size: 13px;
     font-weight: 400;
     letter-spacing: 1.12px;
     line-height: 1.85;
@@ -425,7 +447,7 @@ body {
   .footer__text {
     font-family: 'Optima';
     font-weight: 400;
-    font-size: 14px;
+    font-size: 13px;
     letter-spacing: 1.12px;
     line-height: 1.85;
     color: #F1F4FF; }
@@ -473,7 +495,7 @@ body {
     width: 115px;
     font-family: 'Optima';
     font-weight: 400;
-    font-size: 14px;
+    font-size: 13px;
     letter-spacing: 1.68px;
     line-height: 1.85;
     text-transform: uppercase;
@@ -983,10 +1005,11 @@ body {
         max-height: 719px; } }
   .home-banner__image-top {
     position: absolute;
-    height: 100%;
+    height: calc(100% + 200px);
     width: auto;
-    top: 0;
-    left: 0; }
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%); }
   .home-banner__links {
     border: 0;
     margin-left: auto;
@@ -1087,7 +1110,7 @@ body {
     width: 100%;
     top: 100px;
     left: 0; }
-    @media only screen and (min-width: 1200px) {
+    @media only screen and (min-width: 1400px) {
       .home-banner__secondary-background {
         top: 170px; } }
 
@@ -1260,7 +1283,7 @@ body {
   font-family: "Ivy Mode";
   color: #182060;
   font-size: 30px;
-  word-spacing: 60;
+  letter-spacing: 1.6px;
   line-height: 49px; }
   @media only screen and (min-width: 992px) {
     .alternative-content__we-build {
@@ -1270,11 +1293,12 @@ body {
   width: 100%;
   padding-left: 0px;
   padding-top: 60px;
-  word-spacing: 80;
-  font-size: 16;
+  letter-spacing: 1.28px;
+  font-size: 15px;
   line-height: 25px;
   padding: 20px;
-  font-family: "Optima"; }
+  font-family: "Optima";
+  color: #09102E; }
   @media only screen and (min-width: 992px) {
     .alternative-content__our-alternative {
       width: 280px;
@@ -1393,6 +1417,7 @@ body {
 
 .alternative-content__title {
   font-size: 16px;
+  letter-spacing: 1.28px;
   font-weight: bold;
   margin-bottom: 20px;
   text-transform: uppercase;
@@ -1400,11 +1425,12 @@ body {
   font-family: "Optima"; }
 
 .alternative-content__paragraph {
-  font-size: 16px;
-  word-spacing: 80;
+  font-size: 15px;
+  letter-spacing: 1.28px;
   line-height: 25px;
   margin-bottom: 0px;
-  font-family: "Optima"; }
+  font-family: "Optima";
+  color: #09102E; }
   @media only screen and (min-width: 576px) {
     .alternative-content__paragraph {
       margin-bottom: 45px; } }
@@ -1420,10 +1446,11 @@ body {
 
 .alternative-content__left-panel-title {
   font-size: 60px;
-  font-family: "Optima";
+  font-family: "Ivy Mode";
   text-align: right;
   padding-top: 80px;
   padding-right: 20px;
+  letter-spacing: 5.4px;
   color: #fff; }
   @media only screen and (min-width: 992px) {
     .alternative-content__left-panel-title {
@@ -1477,7 +1504,7 @@ body {
   position: absolute;
   width: 42px;
   height: 42px;
-  background-color: #F1F4FF;
+  background-color: #182060;
   border-radius: 100%;
   right: -21px;
   top: 50%;
@@ -1499,7 +1526,7 @@ body {
     position: absolute;
     width: 30px;
     height: 1px;
-    background-color: #fff;
+    background-color: #182060;
     top: 50%;
     transform: translateY(-50%);
     left: -20px;
@@ -1525,7 +1552,7 @@ body {
   font-family: 'Optima';
   color: #09102E;
   line-height: 25px;
-  word-spacing: 80; }
+  letter-spacing: 1.28px; }
 
 .alternative-content__article-paraghraph {
   padding-left: 100px;
@@ -1536,7 +1563,7 @@ body {
   color: #09102E;
   line-height: 25px;
   font-weight: normal;
-  word-spacing: 80; }
+  letter-spacing: 1.28px; }
 
 .alternative-content__article-link {
   padding-left: 100px;
@@ -1546,7 +1573,7 @@ body {
   font-size: 16px;
   color: #FF24B0;
   line-height: 25px;
-  word-spacing: 80;
+  letter-spacing: 1.28px;
   font-weight: bold;
   text-decoration: none;
   display: block; }
@@ -1638,7 +1665,8 @@ body {
   font-family: "Optima";
   word-spacing: 120;
   line-height: 26px;
-  font-size: 14px; }
+  font-size: 14px;
+  letter-spacing: 1.68px; }
 
 .weekend-content__banner {
   min-height: 390px;
@@ -1735,13 +1763,11 @@ body {
   position: absolute;
   width: 42px;
   height: 42px;
-  background-color: #F1F4FF;
+  background-color: #182060;
   border-radius: 100%;
   right: -21px;
   top: 50%;
   transform: translateY(-50%); }
-  .weekend-content__selector-button--active {
-    background-color: #182060; }
   .weekend-content__selector-button::before {
     content: "";
     position: absolute;
@@ -1793,7 +1819,9 @@ body {
   padding: 0px 20px;
   margin: 0px;
   font-size: 80px;
-  font-family: 'Ivy Mode'; }
+  font-family: 'Ivy Mode';
+  color: #182060;
+  letter-spacing: 5.4px; }
   @media only screen and (min-width: 992px) {
     .weekend-content__title-active {
       padding-left: 100px; } }
@@ -1811,7 +1839,7 @@ body {
   font-family: 'Optima';
   color: #09102E;
   line-height: 25px;
-  word-spacing: 80; }
+  letter-spacing: 1.28px; }
   @media only screen and (min-width: 1200px) {
     .weekend-content__weekend-text {
       padding-left: 100px;
@@ -1831,7 +1859,7 @@ body {
   color: #09102E;
   line-height: 25px;
   font-weight: normal;
-  word-spacing: 80; }
+  letter-spacing: 1.28px; }
   @media only screen and (min-width: 992px) {
     .weekend-content__article-paraghraph {
       padding-left: 100px;
@@ -1858,7 +1886,8 @@ body {
   margin-top: 0px;
   font-weight: bold;
   font-size: 24px;
-  font-family: 'Optima'; }
+  font-family: 'Optima';
+  color: #182060; }
   @media only screen and (min-width: 992px) {
     .weekend-content__article-title {
       padding-left: 100px;
@@ -1900,6 +1929,7 @@ body {
   padding: 0px 30px 0px 0px;
   font-size: 16px;
   font-weight: bold;
+  letter-spacing: 1.28px;
   font-family: 'Optima';
   color: #182060;
   margin-top: 50px;
@@ -2319,18 +2349,6 @@ body {
   min-height: 100vh;
   background-color: #09102E;
   padding-top: 180px; }
-  .about-banner::before {
-    content: "";
-    position: absolute;
-    max-width: 448px;
-    max-height: 736px;
-    top: 180px;
-    left: -20px;
-    width: 100%;
-    height: calc(100% - 30px);
-    background-image: url("../../assets/images/about-background.png");
-    background-repeat: no-repeat;
-    background-size: contain; }
   .about-banner::after {
     content: "";
     position: absolute;
@@ -2340,6 +2358,18 @@ body {
     left: 50%;
     transform: translateX(-50%);
     background-color: #182060; }
+  .about-banner__background {
+    content: "";
+    position: absolute;
+    max-width: 448px;
+    max-height: 736px;
+    top: 180px;
+    left: -20px;
+    width: 100%;
+    height: calc(100% - 30px);
+    background-image: url("../../assets/images/about-background.svg");
+    background-repeat: no-repeat;
+    background-size: contain; }
   .about-banner__title-container {
     position: relative;
     display: flex;
@@ -2365,7 +2395,13 @@ body {
     right: 0;
     top: 36px;
     height: 22px;
-    width: 390px; }
+    width: 50px; }
+    @media only screen and (min-width: 1200px) {
+      .about-banner__title-el {
+        width: 110px; } }
+    @media only screen and (min-width: 1400px) {
+      .about-banner__title-el {
+        width: 220px; } }
     .about-banner__title-el::after {
       content: "";
       position: absolute;
@@ -2541,10 +2577,14 @@ body {
   display: block; }
   .about-contact__container {
     display: grid;
+    grid-template-columns: 1fr;
     max-width: 1420px;
     margin: 0 auto;
-    grid-template-columns: 400px 1fr;
-    grid-gap: 20px; }
+    grid-gap: 20px;
+    padding: 15px; }
+    @media only screen and (min-width: 768px) {
+      .about-contact__container {
+        grid-template-columns: 400px 1fr; } }
   .about-contact__details {
     max-width: 100vw;
     overflow-x: hidden; }
@@ -2575,7 +2615,7 @@ body {
     margin-top: 48px;
     color: #09102E;
     max-width: 100%;
-    padding: 0px 20px; }
+    padding: 0; }
     @media only screen and (min-width: 576px) {
       .about-contact__info {
         padding: 0px; } }
@@ -2584,7 +2624,8 @@ body {
     font-weight: 700;
     text-transform: uppercase; }
   .about-contact__map {
-    padding-top: 30px; }
+    padding-top: 30px;
+    min-height: 450px; }
 
 .team-selector--active {
   display: none; }
