--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -77,6 +77,13 @@
     animation-timing-function: ease-out;
   }
 
+.backInRight--no-zoom {
+    -webkit-animation: backInRightNoZoom 3s;
+    animation: backInRightNoZoom 3s;
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+
 @keyframes backInRight {
     0% {
       transform: translateX(2000px) scale(.7);
@@ -90,6 +97,22 @@
   
     100% {
       transform: scale(1);
+      opacity: 1;
+    }
+  }
+  
+@keyframes backInRightNoZoom {
+    0% {
+      transform: translateX(2000px);
+      opacity: 0.7;
+    }
+  
+    80% {
+      transform: translateX(0px);
+      opacity: .7;
+    }
+  
+    100% {
       opacity: 1;
     }
   }
