--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -102,10 +102,11 @@
 
     &__image-top {
         position: absolute;
-        height: 100%;
+        height: calc(100% + 200px);
         width: auto;
-        top: 0;
+        top: 50%;
         left: 0;
+        transform: translateY(-50%);
     }
 
     &__links {
@@ -241,7 +242,7 @@
         top: 100px;
         left: 0;
 
-        @include media-breakpoint-up(xl) {
+        @include media-breakpoint-up(xi) {
             top: 170px;
         }
     }
